--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body id="grad">
     <h1>BACKGROUND GENERATOR</h1>
-    <input class="color1" type="color" name="color1" value="#ff0000">
-    <input class="color2" type="color" name="color2" value="#00ff00">
+    <input class="color1" type="color" name="color1" value="#00eeff">
+    <input class="color2" type="color" name="color2" value="#ff00f7">
     <h2>Current CSS Background</h2>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
